syntax = "proto3";
package petri.bandoracle.v1beta1;

import "gogoproto/gogo.proto";
import "petri/bandoracle/v1beta1/tx.proto";

option go_package = "github.com/petrichormoney/petri/x/bandoracle/types";

message FetchPriceProposal {
  string title = 1 [(gogoproto.moretags) = "yaml:\"title\""];
  string description = 2 [(gogoproto.moretags) = "yaml:\"description\""];
  MsgFetchPriceData FetchPrice = 3 [(gogoproto.nullable) = false];
}
