syntax = "proto3";
package petri.bandoracle.v1beta1;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";
import "petri/bandoracle/v1beta1/fetch_price.proto";

option go_package = "github.com/petrichormoney/petri/x/bandoracle/types";

message MsgFetchPriceData {
  string creator = 1;
  uint64 oracle_script_id = 2 [
    (gogoproto.customname) = "OracleScriptID",
    (gogoproto.moretags) = "yaml:\"oracle_script_id\""
  ];
  string source_channel = 3;
  FetchPriceCallData calldata = 4;
  uint64 ask_count = 5;
  uint64 min_count = 6;
  repeated cosmos.base.v1beta1.Coin fee_limit = 7 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
  string request_key = 8;
  uint64 prepare_gas = 9;
  uint64 execute_gas = 10;
  string client_id = 11 [(gogoproto.customname) = "ClientID"];
  uint64 twa_batch_size = 12;
  int64 accepted_height_diff = 13 [
    (gogoproto.moretags)   = "yaml:\"accepted_height_diff\""
  ];
}

message MsgFetchPriceDataResponse {
}
